solrcloud/dev/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: solr-dev
  labels:
    environment: dev
    prometheus.io/scrape: "true"
