solrcloud/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solr-dev-solrcloud-common
  annotations:
    # Аннотации для вашего Ingress-контроллера
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"

    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    # Для внешнего LoadBalancer
    kubernetes.io/ingress.class: "nginx"

spec:
  rules:
  - host: solr-dev-solr-qa-solrcloud.apps.sandbox-k8s.komus.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: solr-dev-solrcloud-common
            port:
              number: 80
